--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
 body {
     background-color: silver;
 }
+
+#grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    margin: 0 auto;
+    border: 1px solid black;
+    padding: 20px;
+    width: 75%;
+    height: 75vh;
+}
+
+.grid-item {
+    background-color: red;
+    padding: 20px;
+    text-align: center;
+    cursor: pointer;
+}
