small button style fix

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@ dialog::backdrop {
 
 button {
     border-radius: 15px;
-    background-color: darkgray;
     cursor: pointer;
+}
+
+#play, #pause {
+    background-color: darkgray;
 }
